fix sale badge spacing

--- a/src/components/App/Form/Step3/TicketDuration/TicketDuration.module.scss
+++ b/src/components/App/Form/Step3/TicketDuration/TicketDuration.module.scss
@@ -8,6 +8,7 @@
 
 .sale {
   flex-wrap: nowrap;
+  justify-content: space-between;
 }
 
 .totalPrice,
@@ -26,6 +27,7 @@
 }
 
 .saleBadge {
+  margin-left: $size-xsm;
   padding: $size-xs $size-xsm;
   border-radius: 4px;
   color: $white;
